# quant-research

./: .editorconfig  .env.example  .gitignore  .prettierignore  CLAUDE.local.md.template  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json  (+1 more)
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/alembic/: env.py
services/api-gateway/alembic/versions/: c03d76e67303_users_and_sessions.py
services/api-gateway/app/: main.py
services/api-gateway/app/api/v1/: auth.py  portfolio_proxy.py
services/api-gateway/app/core/: config.py  database.py  redis.py  types.py
services/api-gateway/app/dependencies/: auth.py
services/api-gateway/app/models/: session.py  user.py
services/api-gateway/app/repositories/: users.py
services/api-gateway/app/schemas/: auth.py
services/api-gateway/app/services/: auth.py
services/api-gateway/tests/: conftest.py
services/api-gateway/tests/integration/: conftest.py  test_auth.py  test_health.py
services/portfolio-service/: .env.example  pyproject.toml
services/portfolio-service/alembic/: env.py
services/portfolio-service/alembic/versions/: 0001_create_portfolio_tables.py  0002_add_symbol_and_cash_balance.py  0003_add_pnl_columns_to_metrics.py
services/portfolio-service/app/: main.py
services/portfolio-service/app/clients/: market_data.py
services/portfolio-service/app/core/: config.py
services/portfolio-service/app/models/: __init__.py  holding.py  portfolio.py  portfolio_metrics.py  transaction.py
services/portfolio-service/app/repositories/: holding_repo.py  portfolio_metrics_repo.py  portfolio_repo.py  transaction_repo.py
services/portfolio-service/app/schemas/: __init__.py
services/portfolio-service/app/services/: metrics.py  portfolio.py  snapshot_job.py  transactions.py
services/portfolio-service/tests/: conftest.py
services/portfolio-service/tests/integration/: conftest.py  test_portfolio_api.py
services/portfolio-service/tests/unit/: test_market_client.py  test_metrics_service.py  test_portfolio_service.py  test_transaction_service.py
(+165 files in other folders)
